--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
     "name": "@scom/scom-puppeteer-scraper",
-    "version": "0.1.0",
-    "engines": {
-        "node": ">=18.0.0"
-    },
+    "version": "0.1.1",
+    "main": "lib/index.js",
+    "plugin": "dist/index.js",
+    "pluginTypes": "pluginTypes/index.d.ts",
+    "types": "pluginTypes/index.d.ts",
+    "dependencies": {},
     "devDependencies": {
-        "@types/mocha": "9.1.1",
-        "@types/node": "18.8.4",
-        "mocha": "10.0.0"
+      "@ijstech/compiler": "^0.1.35",
+      "@types/node": "^18.18.6",
+      "ts-node": "^10.9.1",
+      "typescript": "5.2.2",
+      "@scom/scom-scraper": "https://github.com/scom-repos/scom-scraper.git",
+      "puppeteer": "22.9.0"
     },
     "scripts": {
-        "build": "rm -rf lib && tsc",
-        "start": "node lib/index.js",
-        "test": "npx mocha test/*.spec.js"
-    },
-    "dependencies": {
-        "@ijstech/eth-wallet": "^0.1.55",
-        "@scom/scom-scraper": "https://github.com/scom-repos/scom-scraper.git",
-        "ts-node": "10.9.1",
-        "typescript": "4.8.4",
-        "puppeteer": "22.9.0"
+      "build": "rm -rf dist && rm -rf lib && rm -rf pluginTypes && rm -rf types && npx @ijstech/compiler && tsc"
     }
-}
+  }
+  
