--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
       "@types/node": "^18.18.6",
       "ts-node": "^10.9.1",
       "typescript": "5.2.2",
-      "@scom/scom-scraper": "https://github.com/scom-repos/scom-scraper.git",
+      "@scom/scom-scraper": "^0.1.2",
       "puppeteer": "22.9.0"
     },
     "scripts": {
